# plover-stenotype-extended

./: README.md  extended_stenotype.py  setup.cfg
.github/workflows/: build.yml
