[metadata]
name = plover-stenotype-extended
version = 1.0.0
description = Plover Stenotype layout but with extra keys
url = https://github.com/sammdot/plover-stenotype-extended
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
py_modules =
	extended_stenotype

[options.entry_points]
plover.system =
  Stenotype Extended = extended_stenotype
